<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnA"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/a" />

        <Button
            android:id="@+id/btnB"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/b" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/c" />

        <Button
            android:id="@+id/btnD"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/d" />

        <Button
            android:id="@+id/btnE"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/e" />

        <Button
            android:id="@+id/btnF"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/f" />

        <Button
            android:id="@+id/btnG"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/g" />

        <Button
            android:id="@+id/btnH"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/h" />

        <Button
            android:id="@+id/btnI"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/i" />

        <Button
            android:id="@+id/btnJ"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/j" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnK"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/k" />

        <Button
            android:id="@+id/btnL"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/l" />

        <Button
            android:id="@+id/btnM"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/m" />

        <Button
            android:id="@+id/btnN"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/n" />

        <Button
            android:id="@+id/btnO"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/o" />

        <Button
            android:id="@+id/btnP"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/p" />

        <Button
            android:id="@+id/btnQ"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/q" />

        <Button
            android:id="@+id/btnR"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/r" />

        <Button
            android:id="@+id/btnS"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/s" />

        <Button
            android:id="@+id/btnT"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/t" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnU"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/u" />

        <Button
            android:id="@+id/btnV"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/v" />

        <Button
            android:id="@+id/btnX"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/x" />

        <Button
            android:id="@+id/btnY"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/y" />

        <Button
            android:id="@+id/btnZ"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="btnClickOnClick"
            android:text="@string/z" />
    </TableRow>

</FrameLayout>